--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,16 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "hwi/oauth-bundle": "^0.6.3",
+        "jms/i18n-routing-bundle": "^3.0",
         "knplabs/doctrine-behaviors": "^1.5",
         "kunicmarko/sonata-annotation-bundle": "^1.1",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/httplug-bundle": "^1.12",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.40",
         "sonata-project/doctrine-orm-admin-bundle": "^3.6",
+        "sylius/customer-bundle": "^1.3",
         "sylius/user-bundle": "^1.2",
         "symfony/asset": "*",
         "symfony/console": "*",
