--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,7 @@
 framework:
+    templating:
+        engines:
+            twig
     translator:
         fallbacks: ["%locale%"]
     secret: '%env(APP_SECRET)%'
