--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,24 +1,120 @@
+parameters:
+    app.security.admin_regex: "^/admin"
+    app.security.shop_regex: "^(?!partner).+"
+
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+#        app_admin_user_provider:
+#            id: app.admin_user_provider.email_based
+        app_shop_user_provider:
+            id: app.shop_user_provider.email_based
+#        app_partner_provider:
+#            id: sylius.partner_user_provider.email_based
+
+    encoders:
+        Sylius\Component\User\Model\UserInterface: sha512
+
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
+#        admin:
+#            switch_user: true
+#            context: admin
+#            pattern: "%app.security.admin_regex%"
+#            provider: app_admin_user_provider
+#            form_login:
+#                provider: app_admin_user_provider
+#                login_path: app_admin_login
+#                check_path: app_admin_login_check
+#                failure_path: app_admin_login
+#                default_target_path: sonata_admin_dashboard
+#                use_forward: false
+#                use_referer: true
+#                csrf_token_generator: security.csrf.token_manager
+##                csrf_parameter: _csrf_admin_security_token
+##                csrf_token_id: admin_authenticate
+#            remember_me:
+#                secret: "%env(APP_SECRET)%"
+#                path: /admin
+#                name: APP_ADMIN_REMEMBER_ME
+#                lifetime: 31536000
+#                remember_me_parameter: _remember_me
+#            logout:
+#                path: sylius_admin_logout
+#                target: sylius_admin_login
+#            anonymous: true
+
+#        partner_zone:
+#            context: partner
+#            pattern: "^/partner"
+#            provider: app_partner_provider
+#            form_login:
+#                provider: app_partner_provider
+#                login_path: app_partner_login
+#                check_path: app_partner_login_check
+#                failure_path: app_partner_login
+#                default_target_path: app_partner_dashboard
+#                use_forward: false
+#                use_referer: true
+#                csrf_token_generator: security.csrf.token_manager
+#                csrf_parameter: _csrf_partner_security_token
+#                csrf_token_id: partner_authenticate
+#            remember_me:
+#                secret: "%env(APP_SECRET)%"
+#                path: /partner
+#                name: APP_PARTNER_REMEMBER_ME
+#                lifetime: 31536000
+#                remember_me_parameter: _remember_me
+#            logout:
+#                path: app_partner_logout
+#                target: app_partner_login
+#            anonymous: true
+
+        shop:
+            context: shop
+            pattern: "%app.security.shop_regex%"
+            provider: app_shop_user_provider
+            oauth:
+                resource_owners:
+                    wechat: hwi_oauth_wechat
+                login_path: app_shop_user_login
+                use_forward: false
+                failure_path: app_shop_user_login
+                oauth_user_provider:
+                    service: App\OAuth\UserProvider
+            form_login:
+                success_handler: sylius.authentication.success_handler
+                failure_handler: sylius.authentication.failure_handler
+                provider: app_shop_user_provider
+                login_path: app_shop_user_login
+                check_path: app_shop_user_login_check
+                failure_path: app_shop_user_login
+                default_target_path: app_shop_homepage # TODO: change for account
+                use_forward: false
+                use_referer: true
+                csrf_token_generator: security.csrf.token_manager
+            remember_me:
+                secret: "%env(APP_SECRET)%"
+                name: APP_SHOP_REMEMBER_ME
+                lifetime: 31536000
+                remember_me_parameter: _remember_me
+            logout:
+                path: app_shop_user_logout
+                target: app_shop_user_login
+                invalidate_session: false
             anonymous: true
 
-            # activate different ways to authenticate
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
 
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+#        - { path: "%sylius.security.shop_regex%/_partial", role: IS_AUTHENTICATED_ANONYMOUSLY, ips: [127.0.0.1, ::1] }
+#        - { path: "%sylius.security.shop_regex%/_partial", role: ROLE_NO_ACCESS }
+
+#        - { path: "%sylius.security.admin_regex%/login", role: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: "%sylius.security.shop_regex%/login", role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+#        - { path: "^/partner/login", role: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: "^/partner", role: ROLE_PARTNER }
+
+        - { path: "%app.security.shop_regex%/client", role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: "%app.security.shop_regex%/account", role: ROLE_USER }
